# B5

W6/: pyproject.toml
W6/D3/: main.ipynb  main.py  sample.db
W6/D3/tools/: __init__.py  database.py  describe_table.py  execute_query.py  list_tables.py
content/W2/: index.qmd
content/W2/M1/lessons/: 01_slides_intro.qmd
content/W3/exercises/: viz_exercises.ipynb
student/: README.md  ceasar_cipher_problem.ipynb  chap01.ipynb  chap02.ipynb  chap03.ipynb  chap07.ipynb  chap09.ipynb  chap14.ipynb  chap15.ipynb  indexing_problems.ipynb  requests_ex.ipynb
